# AEP

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.beads/: issues.jsonl  metadata.json
.claude/: settings.local.json
.claude/agents/vibedevteam-init/: SKILL.md  USAGE.md
aep-hub/: .env.example  package-lock.json  package.json  tsconfig.json  vitest.config.ts
aep-hub/src/: index.ts
aep-hub/src/db/: agentRepository.ts  index.ts  (+2 more)
aep-hub/tests/: agentId.test.ts  agentIdentityService.test.ts  feedback.e2e.test.ts  feedbackValidation.test.ts  gdiUpdateService.test.ts  hello.e2e.test.ts  hello.test.ts  publish.e2e.test.ts  publishValidation.test.ts  validation.test.ts
aep-sdk/: pyproject.toml
aep-sdk/examples/: demo_workflow.py
aep-sdk/src/aep_sdk/: __init__.py  cli.py  client.py  identity.py  models.py
aep-sdk/src/aep_sdk/archive/: __init__.py  archiver.py  models.py  pending_queue.py
aep-sdk/src/aep_sdk/collectors/: __init__.py  log.py
aep-sdk/src/aep_sdk/feedback/: __init__.py  collector.py  models.py
aep-sdk/src/aep_sdk/session/: __init__.py  action_logger.py  models.py  recorder.py  storage.py
aep-sdk/tests/: test_action_logger.py  test_archiver.py  test_feedback_collector.py  test_identity.py  test_models_session.py  test_pending_queue.py  test_session_recorder.py
docs/: Agent 自进化基础设施调研.md  同类产品.md  调研.md
docs/_project/: AEP-USAGE-VALIDATION.md  CURRENT-GUIDE.md  DATA-COLLECTION-DESIGN.md  PROJ-E-001-AEP-Protocol-v1.md  biz-overview.md  prd-v0.md  prd-v1-session-memory.md
memory/: beads-usage.md
(+117 files in other folders)
